WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277144
[WPE][GTK] Unsupported browser warning on Google Docs
https://bugs.webkit.org/show_bug.cgi?id=277144
Summary
[WPE][GTK] Unsupported browser warning on Google Docs
Michael Catanzaro
Reported
2024-07-26 06:20:03 PDT
We need to upgrade the Chrome user agent quirk version. We can try upgrading the Firefox quirk at the same time, though it's much less important.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2024-07-26 06:46:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31294
EWS
Comment 2
2024-07-26 07:58:42 PDT
Committed
281402@main
(5965f597b3e1): <
https://commits.webkit.org/281402@main
> Reviewed commits have been landed. Closing PR #31294 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug