Cherry-pick 281402@main (5965f597b3e1). https://bugs.webkit.org/show_bug.cgi?id=277144

[WPE][GTK] Unsupported browser warning on Google Docs
    https://bugs.webkit.org/show_bug.cgi?id=277144

    Reviewed by Carlos Garcia Campos.

    Updating the Chrome quirk should fix this bug. We can also update the
    Firefox quirk for good measure. Let's try to stay ahead of the game by
    using an unsubtle high version number.

    * Source/WebCore/platform/glib/UserAgentQuirks.cpp:
    (WebCore::UserAgentQuirks::stringForQuirk):

    Canonical link: https://commits.webkit.org/281402@main

Canonical link: https://commits.webkit.org/274313.327@webkitglib/2.44